tests/type_errors/trait_bound_violation.nos
# expect_error: incompatible types
# Test: calling function that requires Num trait with non-Num type

addNumbers[T: Num](a: T, b: T) = a + b

main() = addNumbers("hello", "world")  # String doesn't implement Num
